feat(joint-dev): implement Trae x OpenClaw joint development engine, auto-operation center, and boss verification protocol